<resources>
    <string name="app_name">Birds of a Feather</string>
    <string name="choose_your_classes_str">Choose your classes</string>
    <string name="course_subject_hintStr">Subject</string>
    <string name="course_number_hintStr">Number</string>
    <string name="enter_button_str">Enter</string>
    <string name="finish_button_str">Done</string>
    <string name="name_string"></string>
    <string name="student_profile_picture">Student profile picture</string>
    <string name="common_classes_prompt_string">Common classes with you:</string>
    <string name="saveBtnString">Save</string>
    <string name="continueBtnString">Continue</string>
...
    <string name="empty_field_err_str">Please fill in every field.</string>
    <string name="course_name_invalid_err_str">Please enter a 2–4 letter subject name.\n(e.g. SE or COGS)</string>
    <string name="course_number_invalid_err_str">Please enter a valid course number.\n(e.g. 100 or 15L)</string>
    <string name="duplicate_course_err_str">This course is already entered</string>
    <string name="no_course_entered_err_str">Please enter at least one course.</string>
    <string name="title_activity_start_stop_search">StartStopSearch</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="confirm_name">Confirm name:</string>
    <string name="name_input">Name</string>
    <string name="confirm">CONFIRM</string>
    <string name="cont">CONTINUE</string>
    <string name="go_back">Go Back</string>
    <string name="go_to_mock_page">Mock the arrival of nearby messages</string>
    <string name="input_name_prompt_str">Name</string>
    <string name="login_btn_str">Login</string>
    <string name="create_profile_btn_str">Create Profile</string>
    <string name="view_favorites_string">View Favorites</string>
    <string name="favorite_students_string">Favorite Students</string>
    <string name="current_session_title">Current Session:</string>
    <string name="start_session_popup_title">Create / Resume Session</string>
    <string name="start_session_btn_str">START SESSION</string>
    <string name="save_popup_text">Enter A Name For Your Session Or Choose a Current Course:</string>
    <string name="save_popup_button">SAVE</string>
    <string name="sort_text">Sort:</string>

</resources>
