...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502">

        <Spinner
            android:id="@+id/session_spinner"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:dropDownWidth="225dp"
            android:dropDownSelector="#000000"
            android:spinnerMode="dropdown"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="84dp" />
    </FrameLayout>

    <Button
        android:id="@+id/start_session_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/start_session_btn_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
...
