...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/Create_Profile_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A564E7"
        android:onClick="onCreateProfile"
        android:text="@string/create_profile_btn_str"
        android:textColor="#000000"
...
